# pong-raylib

./: CMakeLists.txt  README.md  build.sh
src/: ball.cpp  ball.hpp  config.hpp  main.cpp  slider.cpp  slider.hpp
